tdf#104420 writerfilter: no dummy para in headers

Change-Id: I22bf2d85e01ce5a084babdc07a11ada0790f4933
Reviewed-on: https://gerrit.libreoffice.org/31710
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit b71c09a31c245f2fc1e1ff3760206bb121869633)
Reviewed-on: https://gerrit.libreoffice.org/31988